--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+
+# ignore all exept src and bin folders
+LOCALSmartBeerpong/*
+!LOCALSmartBeerpong/src
+!LOCALSmartBeerpong/bin
